infrastructure/argocd/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: infra
  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/part-of: ai-lab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.aymenmastouri.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-tls
